# Interface0

./: README.md
hardware/KiCad/: Interface0.kicad_pcb  Interface0.kicad_prl  Interface0.kicad_pro  Interface0.kicad_sch  fp-lib-table  sym-lib-table
hardware/XC9572XL-VQ64/: Interface0.ucf  Interface0.v  Interface0.vhd  Interface0.xise  Interface0_defs.v  Interface0_sim.v
srcs/rpi/server/: CMakeLists.txt  main.cpp
srcs/z80/: defines.asm  nmi.asm
